hphp/hack/test/typecheck/memoize/array_of_bad_class.php.exp
File "array_of_bad_class.php", line 7, characters 48-51:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize (Typing[4149])
  File "array_of_bad_class.php", line 7, characters 43-45:
  This is an object of type Bar
  File "hackarray.hhi", line 45, characters 73-73:
    via this generic `T`
  File "hackarray.hhi", line 19, characters 119-120:
    via this generic `Tv`
  File "interfaces.hhi", line 110, characters 66-67:
    via this generic `Tv`
